--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,7 @@
 @import 'tailwindcss';
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: dark --default;
+}
 @config '../tailwind.config.js';
 
 /*
